create input fields in html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <link rel="stylesheet" href="">
 </head>
 <body>
+  <fieldset>
+    <legend>Tree Builder Info</legend>
+   <!-- Inupt field for number of layers in the tree -->
+    <div>
+      <label>How many layers in the tree?</label>
+      <input type="text" id="layers" placeholder="Num. of Layers">
+    </div>
+    <!-- Input field for character used to make the tree -->
+    <div>
+      <label>Enter a character to use to build the tree</label>
+      <input type="text" id="character" placeholder="Enter Character">
+    </div>
+
+  </fieldset>
 
   <script src="quiz.js"></script>
 </body>
