add 'grow tree' button

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
       <label>Enter a character to use to build the tree</label>
       <input type="text" id="character" placeholder="Enter Character">
     </div>
+    <!-- A 'grow your tree' button -->
+    <button type="submit" id="grow">Grow Your Tree</button>
 
   </fieldset>
 
